--- a/package.json
+++ b/package.json
@@ -14,15 +14,25 @@
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
     "apollo-link-batch-http": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-error": "^1.1.12",
+    "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.2",
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^3.0.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "next": "^9.1.1",
     "react": "^16.11.0",
     "react-apollo": "^3.1.3",
     "react-apollo-hooks": "^0.5.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "@types/node": "^12.11.7",
