--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,29 @@
-  
 {
-    "compilerOptions": {
-      "types": [
-        "react",
-        "node"
-      ],
-      "module": "esnext",
-      "target": "es5",
-      "lib": [
-        "es2017",
-        "es6",
-        "dom",
-        "esnext"
-      ],
-      "sourceMap": true,
-      "allowJs": false,
-      "moduleResolution": "node",
-      "jsx": "preserve",
-      "forceConsistentCasingInFileNames": true,
-      "noImplicitReturns": true,
-      "noImplicitThis": true,
-      "noImplicitAny": false,
-      "strictNullChecks": true,
-      "suppressImplicitAnyIndexErrors": true,
-      "noUnusedLocals": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "skipLibCheck": true,
-      "strict": false,
-      "noEmit": true,
-      "resolveJsonModule": true,
-      "isolatedModules": true
-    },
-    "exclude": [
-      "node_modules"
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
     ],
-    "include": [
-      "next-env.d.ts",
-      "**/*.ts",
-      "**/*.tsx"
-    ]
-  }
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve"
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
+}
